--- a/TIL/230318.md
+++ b/TIL/230318.md
@@ -14,6 +14,7 @@
         - [View 환경설정](#view-%ED%99%98%EA%B2%BD%EC%84%A4%EC%A0%95)
             - [Welcome page](#welcome-page)
         - [빌드하고 실행하기](#%EB%B9%8C%EB%93%9C%ED%95%98%EA%B3%A0-%EC%8B%A4%ED%96%89%ED%95%98%EA%B8%B0)
+    - [섹션 2.](#%EC%84%B9%EC%85%98-2)
 
 <!-- /TOC -->
 
@@ -75,3 +76,18 @@
 4. 생성된 bulid 폴더의 libs로 이동
 5. jar 파일을 실행시키면 서버 실행됨
 - 배포 빌드 후 생성된 jar 파일만 배포하면 spring 구현이 문제 없게 돌아감
+
+## 섹션 2.
+- 정적 컨텐츠
+  - 그냥 파일을 그대로 내림
+- MVC와 템플릿 엔진
+  - 템플릿 엔진을 MVC 방식으로 쪼개서 View를 좀 더 프로그래밍 방식으로 렌더링하여 클라이언트에게 전달
+  - MVC
+    - Model, View, Controller
+    - Model
+    - View
+      - 화면과 관련된 일만 함
+    - Controller
+- API
+  - 객체를 반환하는 것
+  - HttpMessageConverter로 형식을 JSON으로 변경하여 전달함
