--- a/TIL/스프링입문.md
+++ b/TIL/스프링입문.md
@@ -14,7 +14,11 @@
         - [View 환경설정](#view-%ED%99%98%EA%B2%BD%EC%84%A4%EC%A0%95)
             - [Welcome page](#welcome-page)
         - [빌드하고 실행하기](#%EB%B9%8C%EB%93%9C%ED%95%98%EA%B3%A0-%EC%8B%A4%ED%96%89%ED%95%98%EA%B8%B0)
-    - [섹션 2.](#%EC%84%B9%EC%85%98-2)
+    - [섹션 2. 스프링 웹 개발 기초](#%EC%84%B9%EC%85%98-2-%EC%8A%A4%ED%94%84%EB%A7%81-%EC%9B%B9-%EA%B0%9C%EB%B0%9C-%EA%B8%B0%EC%B4%88)
+    - [섹션3. 회원 관리 예제 - 백엔드 개발](#%EC%84%B9%EC%85%983-%ED%9A%8C%EC%9B%90-%EA%B4%80%EB%A6%AC-%EC%98%88%EC%A0%9C---%EB%B0%B1%EC%97%94%EB%93%9C-%EA%B0%9C%EB%B0%9C)
+        - [비즈니스 요구사항 정리](#%EB%B9%84%EC%A6%88%EB%8B%88%EC%8A%A4-%EC%9A%94%EA%B5%AC%EC%82%AC%ED%95%AD-%EC%A0%95%EB%A6%AC)
+            - [웹 애플리케이션 계층 구조](#%EC%9B%B9-%EC%95%A0%ED%94%8C%EB%A6%AC%EC%BC%80%EC%9D%B4%EC%85%98-%EA%B3%84%EC%B8%B5-%EA%B5%AC%EC%A1%B0)
+        - [테스트 케이스 작성](#%ED%85%8C%EC%8A%A4%ED%8A%B8-%EC%BC%80%EC%9D%B4%EC%8A%A4-%EC%9E%91%EC%84%B1)
 
 <!-- /TOC -->
 
@@ -77,7 +81,7 @@
 5. jar 파일을 실행시키면 서버 실행됨
 - 배포 빌드 후 생성된 jar 파일만 배포하면 spring 구현이 문제 없게 돌아감
 
-## 섹션 2.
+## 섹션 2. 스프링 웹 개발 기초
 - 정적 컨텐츠
   - 그냥 파일을 그대로 내림
 - MVC와 템플릿 엔진
@@ -91,3 +95,20 @@
 - API
   - 객체를 반환하는 것
   - HttpMessageConverter로 형식을 JSON으로 변경하여 전달함
+
+---
+>230319
+## 섹션3. 회원 관리 예제 - 백엔드 개발
+### 비즈니스 요구사항 정리
+#### 웹 애플리케이션 계층 구조
+- 컨트롤러: 웹 MVC의 컨트롤러 역할
+- 서비스: 핵심 비즈니스 로직 구현
+- 리포지토리: 데이터베이스에 접근, 도메인 객체를 DB에 저장하고 관리
+- 도메인: 비즈니스 도메인 객체, 예) 회원, 주문, 쿠폰 등등 주로 데이터베이스에 저장하고 관리됨
+
+### 테스트 케이스 작성
+- main 메서드를 통해서 실행하거나 웹 애플리케이션의 컨트롤러를 통해서 진행
+  - 오래걸리고 반복 실행이 어려움
+  - 여러 테스트 동시 실행 어려움
+- 테스트는 순서에 의존관계 없게 설계되어야함
+- 그걸 위해 매번 테스트가 끝나고 메모리에 내용을 clear 해줘야함
